# crforge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-test.yml
core/: README.md  build.gradle.kts
core/src/main/java/org/crforge/core/ability/: AbilityData.java  (+18 more)
data/: build.gradle.kts
data/src/main/resources/cards/: buffs.json  cards.json  projectiles.json  units.json
desktop/: build.gradle.kts
desktop/src/main/java/org/crforge/desktop/: CRForgeGame.java  DesktopLauncher.java
docs/: architecture.md  arena-and-match.md  card-tracker.md  card_tracker.md  combat.md  level_scaling.md  physics-and-effects.md  reverse_engineering.md  schema.md  secret_stats.md  simulation.md  spawning.md  spell-radius.md
gradle/: libs.versions.toml
gym-bridge/: build.gradle.kts
gym-bridge/src/main/java/org/crforge/bridge/: BridgeServer.java  BridgeSession.java  GameSession.java
gym-bridge/src/test/java/org/crforge/bridge/: GameSessionTest.java
python/: README.md  pyproject.toml
python/crforge_gym/: __init__.py  bridge.py  env.py  jpype_bridge.py  opponents.py  threaded_vec_env.py  wrappers.py
python/examples/: bench_step.py  evaluate.py  pretrain_bc.py  run_episodes.py  train_ppo.py
python/tests/: test_env_checker.py  test_integration.py
scripts/: start_training.sh
tools/formation_visualizer/: README.md  formation_visualizer.py
(+316 files in other folders)
